<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zweckinger.myvaccreg.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_vaccinations"
        android:name="com.zweckinger.myvaccreg.ui.vaccination.VaccinationFragment"
        android:label="@string/title_vaccinations"
        tools:layout="@layout/fragment_vaccinations" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zweckinger.myvaccreg.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_illness"
        android:name="com.zweckinger.myvaccreg.ui.illness.IllnessFragment"
        android:label="@string/title_illness"
        tools:layout="@layout/fragment_illness" />
</navigation>