<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/form_top_margin"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/form_profile_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/form_element_vertical_margin"
            android:autofillHints="@string/profile_name"
            android:ems="10"
            android:hint="@string/profile_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/form_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_button_top_margin"
            android:text="@string/action_edit_profile" />

        <Button
            android:id="@+id/form_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_delete_profile"
            android:backgroundTint="@color/danger" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>